# best_mobile_tariff_new

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
models/: decision_tree_model.joblib  kmeans_model.joblib
src/insights/data_analysis/: data_manipulation.ipynb  data_visualization.ipynb  plan_calculator.ipynb
src/insights/models/: label_encoder.joblib  mobile_plan_model.joblib  scaler.joblib
src/insights/task_analysis/: AI_test_new.py  AI_test_old.py  mobile_analysis.py  model_predictor.py  model_train.ipynb
