[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.10.14"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
jupyter = "^1.1.1"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"